unpackaged/main/default/objects/NCP_Sessions__c/NCP_Sessions__c.object-meta.xml
<CustomObject>
    <label>NCP Session</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NCP Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>