unpackaged/main/default/objects/NCP_Sessions__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>NCP Sessions</relationshipLabel>
    <relationshipName>NCP_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>