unpackaged/main/default/objects/NCP_Sessions__c/fields/App_Fee_Submitting__c.field-meta.xml
<CustomField>
    <fullName>App_Fee_Submitting__c</fullName>
    <formula>VALUE(TEXT(VALUE(Minutes_EDU_Submitting__c) / 50))*100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>App Fee (Submitting)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>