unpackaged/main/default/objects/NCP_Sessions__c/fields/Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Application_Number__c</fullName>
    <formula>Application__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Number</label>
    <type>Text</type>
</CustomField>