unpackaged/main/default/objects/NCP_Sessions__c/fields/Concurrent_Session__c.field-meta.xml
<CustomField>
    <fullName>Concurrent_Session__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Concurrent Session</label>
    <type>Checkbox</type>
</CustomField>