unpackaged/main/default/objects/NCP_Sessions__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>NCP Sessions</relationshipLabel>
    <relationshipName>NCP_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>