unpackaged/main/default/objects/NCP_Sessions__c/fields/Credit_Val__c.field-meta.xml
<CustomField>
    <fullName>Credit_Val__c</fullName>
    <formula>TEXT(VALUE(Minutes_EDU_Submitting__c) / 50)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Credits</label>
    <type>Text</type>
</CustomField>