unpackaged/main/default/objects/NCP_Sessions__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>