unpackaged/main/default/objects/NCP_Sessions__c/fields/Directory_Description__c.field-meta.xml
<CustomField>
    <fullName>Directory_Description__c</fullName>
    <formula>&#39;&lt;div class=&quot;dir-box&quot; data-title=&quot;&#39;&amp;SUBSTITUTE(TEXT(ECCHOEdu_Category__c), &quot; &quot;, &quot;&quot;)&amp;&#39;&quot;&gt;&#39;&amp;
&#39;&lt;div class=&quot;dir-desc&quot;&gt;&lt;b&gt;&#39;&amp; Name &amp;&#39;&lt;/b&gt;&#39;&amp;
&#39;&lt;div class=&quot;dir-duration&quot;&gt;&lt;span&gt;Length:&lt;/span&gt; &#39;&amp;Minutes_EDU_Submitting__c&amp;&#39;&lt;/div&gt;&#39;&amp;
&#39;&lt;div class=&quot;dir-duration&quot;&gt;&lt;span&gt;NCP Credits:&lt;/span&gt; &#39;&amp;Credit_Val__c&amp;&#39;&lt;/div&gt;&#39;&amp;
&#39;&lt;div class=&quot;dir-actions&quot;&gt;&#39;&amp;Actions__c&amp;&#39;&lt;/div&gt;&lt;/div&gt;&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Directory Description</label>
    <type>Text</type>
</CustomField>