unpackaged/main/default/objects/NCP_Sessions__c/fields/Directory_Footer__c.field-meta.xml
<CustomField>
    <fullName>Directory_Footer__c</fullName>
    <formula>&#39;&lt;div class=&quot;dir-duration&quot;&gt;&lt;span&gt;Length:&lt;/span&gt; &#39;&amp;Minutes_EDU_Submitting__c&amp;&#39;&lt;/div&gt;&#39;&amp;
&#39;&lt;div class=&quot;dir-duration&quot;&gt;&lt;span&gt;NCP Credits:&lt;/span&gt; &#39;&amp;Credit_Val__c&amp;&#39;&lt;/div&gt;&#39;&amp;
&#39;&lt;div class=&quot;dir-actions&quot;&gt;&#39;&amp;Actions__c&amp;&#39;&lt;/div&gt;&lt;/div&gt;&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Directory Footer</label>
    <type>Text</type>
</CustomField>