unpackaged/main/default/objects/NCP_Sessions__c/fields/Directory_Title__c.field-meta.xml
<CustomField>
    <fullName>Directory_Title__c</fullName>
    <formula>IF(AND(Registration_Link__c != null, Is_Upcoming__c == true), HYPERLINK( Registration_Link__c ,Name,&#39;_blank&#39;), 
IF( URL__c != null,HYPERLINK( URL__c ,Name,&#39;_blank&#39;),Name)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Title</label>
    <type>Text</type>
</CustomField>