unpackaged/main/default/objects/NCP_Sessions__c/fields/Display_in_Pre_Approved_Directory__c.field-meta.xml
<CustomField>
    <fullName>Display_in_Pre_Approved_Directory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this session will appear in the public pre-approved session directory</description>
    <inlineHelpText>If checked, this session will appear in the public pre-approved session directory</inlineHelpText>
    <label>Display in Pre-Approved Directory</label>
    <type>Checkbox</type>
</CustomField>