unpackaged/main/default/objects/NCP_Sessions__c/fields/ECCHO_Declined_Explanation__c.field-meta.xml
<CustomField>
    <fullName>ECCHO_Declined_Explanation__c</fullName>
    <description>Why did ECCHO decline this session for Pre-Approval?</description>
    <inlineHelpText>Why did ECCHO decline this session for Pre-Approval?</inlineHelpText>
    <label>ECCHO Declined Explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>