unpackaged/main/default/objects/NCP_Sessions__c/fields/ECCHOEdu_Category__c.field-meta.xml
<CustomField>
    <fullName>ECCHOEdu_Category__c</fullName>
    <label>ECCHOEdu Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All About Check</fullName>
            </value>
            <value>
                <fullName>What do I do when . . .</fullName>
            </value>
            <value>
                <fullName>Complimentary Webinars</fullName>
            </value>
            <value>
                <fullName>ECCHO OPS Updates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>