unpackaged/main/default/objects/NCP_Sessions__c/fields/Files_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Files_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Files Uploaded</label>
    <type>Checkbox</type>
</CustomField>