unpackaged/main/default/objects/NCP_Sessions__c/fields/FON_Sales_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>FON_Sales_Order_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order Line</label>
    <referenceTo>OrderApi__Sales_Order_Line__c</referenceTo>
    <relationshipLabel>NCP Sessions</relationshipLabel>
    <relationshipName>NCP_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>