unpackaged/main/default/objects/NCP_Sessions__c/fields/General_Session_Notes__c.field-meta.xml
<CustomField>
    <fullName>General_Session_Notes__c</fullName>
    <label>General Session Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>