unpackaged/main/default/objects/NCP_Sessions__c/fields/Held_in_Conjunction__c.field-meta.xml
<CustomField>
    <fullName>Held_in_Conjunction__c</fullName>
    <label>Held in Conjunction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>