unpackaged/main/default/objects/NCP_Sessions__c/fields/Instructor__c.field-meta.xml
<CustomField>
    <fullName>Instructor__c</fullName>
    <label>Instructor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>