unpackaged/main/default/objects/NCP_Sessions__c/fields/Instructor_Title__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Title__c</fullName>
    <label>Instructor Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>