unpackaged/main/default/objects/NCP_Sessions__c/fields/Is_Paid__c.field-meta.xml
<CustomField>
    <fullName>Is_Paid__c</fullName>
    <formula>Application__r.IsPaid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Paid</label>
    <type>Checkbox</type>
</CustomField>