unpackaged/main/default/objects/NCP_Sessions__c/fields/Is_Upcoming__c.field-meta.xml
<CustomField>
    <fullName>Is_Upcoming__c</fullName>
    <formula>IF( Session_Date__c &gt; TODAY() , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Upcoming</label>
    <type>Checkbox</type>
</CustomField>