unpackaged/main/default/objects/NCP_Sessions__c/fields/Legacy_NCP_Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_NCP_Session_Id__c</fullName>
    <label>Legacy NCP Session Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>