unpackaged/main/default/objects/NCP_Sessions__c/fields/Members_Only__c.field-meta.xml
<CustomField>
    <fullName>Members_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Members Only</label>
    <type>Checkbox</type>
</CustomField>