unpackaged/main/default/objects/NCP_Sessions__c/fields/Minutes_EDU_Submitting__c.field-meta.xml
<CustomField>
    <fullName>Minutes_EDU_Submitting__c</fullName>
    <label>Minutes EDU (Submitting)</label>
    <length>4</length>
    <type>Text</type>
</CustomField>