unpackaged/main/default/objects/NCP_Sessions__c/fields/NCP_Training_Category__c.field-meta.xml
<CustomField>
    <fullName>NCP_Training_Category__c</fullName>
    <label>NCP Training Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rules, Laws &amp; Regulations</fullName>
            </value>
            <value>
                <fullName>Fraud and Risk Mitigation</fullName>
            </value>
            <value>
                <fullName>Check Operations</fullName>
            </value>
            <value>
                <fullName>Check Products</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>