unpackaged/main/default/objects/NCP_Sessions__c/fields/Provider_Notes__c.field-meta.xml
<CustomField>
    <fullName>Provider_Notes__c</fullName>
    <label>Provider Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>