unpackaged/main/default/objects/NCP_Sessions__c/fields/Registration_Link__c.field-meta.xml
<CustomField>
    <fullName>Registration_Link__c</fullName>
    <label>Registration Link</label>
    <type>Url</type>
</CustomField>