unpackaged/main/default/objects/NCP_Sessions__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order</label>
    <referenceTo>OrderApi__Sales_Order__c</referenceTo>
    <relationshipLabel>NCP Sessions</relationshipLabel>
    <relationshipName>NCP_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>