unpackaged/main/default/objects/NCP_Sessions__c/fields/Search_Date__c.field-meta.xml
<CustomField>
    <fullName>Search_Date__c</fullName>
    <description>For Directory Search Only</description>
    <formula>TEXT(YEAR(Session_Date__c))&amp;&#39;-&#39;&amp;IF(MONTH(Session_Date__c) &lt; 10, &#39;0&#39;&amp;TEXT(MONTH(Session_Date__c)), TEXT(MONTH(Session_Date__c))) &amp;&#39;-&#39;&amp;IF(DAY(Session_Date__c) &lt; 10, &#39;0&#39;&amp;TEXT(DAY(Session_Date__c)), TEXT(DAY(Session_Date__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date</label>
    <type>Text</type>
</CustomField>