unpackaged/main/default/objects/NCP_Sessions__c/fields/Sequential_number__c.field-meta.xml
<CustomField>
    <fullName>Sequential_number__c</fullName>
    <displayFormat>{00000}</displayFormat>
    <label>Sequential number</label>
    <type>AutoNumber</type>
</CustomField>