unpackaged/main/default/objects/NCP_Sessions__c/fields/Session_Date__c.field-meta.xml
<CustomField>
    <fullName>Session_Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>