unpackaged/main/default/objects/NCP_Sessions__c/fields/Session_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Session_Date_Time__c</fullName>
    <formula>TEXT(MONTH(Session_Date__c))&amp;&#39;/&#39;&amp;TEXT(DAY(Session_Date__c))&amp;&#39;/&#39;&amp;TEXT(YEAR(Session_Date__c))&amp;&#39; &#39;&amp; Session_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session Date/Time</label>
    <type>Text</type>
</CustomField>