unpackaged/main/default/objects/NCP_Sessions__c/fields/Session_ID__c.field-meta.xml
<CustomField>
    <fullName>Session_ID__c</fullName>
    <formula>IF(Provider_Name__c = &#39;ECCHO&#39;, 
(&#39;001.&#39; + Sequential_number__c  + &#39;.&#39;+  Session_Type_for_ID__c  +&#39;-&#39;+ Credit_Val__c ),
(Account__r.FON_Partner_Provider_ID__c + &#39;.&#39; + Sequential_number__c  + &#39;.&#39;+  Session_Type_for_ID__c  +&#39;-&#39;+ Credit_Val__c ))</formula>
    <label>Session ID</label>
    <type>Text</type>
</CustomField>