unpackaged/main/default/objects/NCP_Sessions__c/fields/Session_Time__c.field-meta.xml
<CustomField>
    <fullName>Session_Time__c</fullName>
    <label>Session Time</label>
    <length>25</length>
    <type>Text</type>
</CustomField>