unpackaged/main/default/objects/NCP_Sessions__c/fields/Session_Type_for_ID__c.field-meta.xml
<CustomField>
    <fullName>Session_Type_for_ID__c</fullName>
    <formula>IF (ISPICKVAL(Session_Type__c, &quot;Conference&quot;), &quot;C&quot;,
IF (ISPICKVAL(Session_Type__c, &quot;Workshop&quot;), &quot;WK&quot;,
IF (ISPICKVAL(Session_Type__c, &quot;Conference Call&quot;), &quot;CC&quot;,
IF (ISPICKVAL(Session_Type__c, &quot;e-Publication&quot;), &quot;PUB&quot;,
IF (ISPICKVAL(Session_Type__c, &quot;ECCHO Business Committee Meeting&quot;), &quot;EB&quot;,
IF (ISPICKVAL(Session_Type__c, &quot;ECCHO Hosted Session&quot;), &quot;E&quot;,
IF (ISPICKVAL(Session_Type__c, &quot;ECCHO NCP Editorial Board&quot;), &quot;ENEB&quot;,
IF (ISPICKVAL(Session_Type__c, &quot;ECCHO OPS Chairman&quot;), &quot;EOO&quot;,
IF (ISPICKVAL(Session_Type__c, &quot;ECCHO OPS Committee Meeting&quot;), &quot;EO&quot;,
IF (ISPICKVAL(Session_Type__c, &quot;General Session&quot;), &quot;GS&quot;,
IF (ISPICKVAL(Session_Type__c, &quot;In-Person Meeting&quot;), &quot;IPM&quot;,
IF (ISPICKVAL(Session_Type__c, &quot;In-Person Training&quot;), &quot;IPT&quot;,
IF (ISPICKVAL(Session_Type__c, &quot;Lunch-N-Learn&quot;), &quot;LL&quot;,
IF (ISPICKVAL(Session_Type__c, &quot;NCP CE Workshop&quot;), &quot;EWK&quot;,
IF (ISPICKVAL(Session_Type__c, &quot;NCP Evaluation of Pilot Items&quot;), &quot;EPI&quot;,
IF (ISPICKVAL(Session_Type__c, &quot;NCP Guide Program&quot;), &quot;NCPG&quot;,
IF (ISPICKVAL(Session_Type__c, &quot;NCP Partner Training&quot;), &quot;ETT&quot;,
IF (ISPICKVAL(Session_Type__c, &quot;OnDemand&quot;), &quot;OD&quot;,
IF (ISPICKVAL(Session_Type__c, &quot;Roundtable&quot;), &quot;ERDT&quot;,
IF (ISPICKVAL(Session_Type__c, &quot;Seminar&quot;), &quot;S&quot;,
IF (ISPICKVAL(Session_Type__c, &quot;User Group&quot;), &quot;UG&quot;,
IF (ISPICKVAL(Session_Type__c, &quot;Web Based Training&quot;), &quot;WBT&quot;,
IF (ISPICKVAL(Session_Type__c, &quot;Webinar&quot;), &quot;W&quot;, null
)))))))))))))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session Type for ID</label>
    <type>Text</type>
</CustomField>