unpackaged/main/default/objects/NCP_Sessions__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <inlineHelpText>This URL turns the session name into a hotlink on the NCP Pre-Approved Sessions Directory</inlineHelpText>
    <label>Registration URL</label>
    <type>Url</type>
</CustomField>