unpackaged/main/default/objects/NCP_Sessions__c/fields/View_PDF__c.field-meta.xml
<CustomField>
    <fullName>View_PDF__c</fullName>
    <description>Full URL. Ex: https://fonteva.com</description>
    <inlineHelpText>Full URL. Ex: https://fonteva.com</inlineHelpText>
    <label>View PDF</label>
    <type>Url</type>
</CustomField>