unpackaged/main/default/objects/NCP_Sessions__c/validationRules/Value_Limited_to_250.validationRule-meta.xml
<ValidationRule>
    <fullName>Value_Limited_to_250</fullName>
    <active>true</active>
    <errorConditionFormula>LEN( Description__c ) &gt; 250</errorConditionFormula>
    <errorDisplayField>Description__c</errorDisplayField>
    <errorMessage>This field cannot exceed 250 characters.</errorMessage>
</ValidationRule>