unpackaged/main/default/objects/NCP_Sessions__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Search_Date__c</columns>
    <columns>Published__c</columns>
    <columns>Provider_Name__c</columns>
    <columns>Session_ID__c</columns>
    <columns>Account__c</columns>
    <columns>Application__c</columns>
    <columns>Members_Only__c</columns>
    <columns>Status__c</columns>
    <columns>ECCHOEdu_Category__c</columns>
    <columns>NCP_Training_Category__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Session_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>NCP</value>
    </filters>
    <label>All</label>
</ListView>