unpackaged/main/default/objects/NCP_Sessions__c/listViews/ECCHOEd_NCP_Sessions.listView-meta.xml
<ListView>
    <fullName>ECCHOEd_NCP_Sessions</fullName>
    <columns>NAME</columns>
    <columns>Search_Date__c</columns>
    <columns>Published__c</columns>
    <columns>Provider_Name__c</columns>
    <columns>Session_ID__c</columns>
    <columns>Account__c</columns>
    <columns>Application__c</columns>
    <columns>Members_Only__c</columns>
    <columns>Status__c</columns>
    <columns>ECCHOEdu_Category__c</columns>
    <columns>NCP_Training_Category__c</columns>
    <columns>View_PDF__c</columns>
    <columns>View_WebEx__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ECCHOEdu_Category__c</field>
        <operation>equals</operation>
        <value>All About Check,What do I do when . . .,Complimentary Webinars,ECCHO OPS Updates</value>
    </filters>
    <filters>
        <field>Session_Date__c</field>
        <operation>greaterThan</operation>
        <value>1/1/2025</value>
    </filters>
    <label>Published ECCHOEd Sessions</label>
</ListView>