unpackaged/main/default/objects/NCP_Sessions__c/listViews/Pending_Approval.listView-meta.xml
<ListView>
    <fullName>Pending_Approval</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Session_Date__c</columns>
    <columns>Provider_Name__c</columns>
    <columns>Session_Title__c</columns>
    <columns>Session_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>Pending Approval NCP Sessions</label>
</ListView>