unpackaged/main/default/objects/NCP_Sessions__c/listViews/Published_Sessions.listView-meta.xml
<ListView>
    <fullName>Published_Sessions</fullName>
    <columns>NAME</columns>
    <columns>Provider_Name__c</columns>
    <columns>Session_Date__c</columns>
    <columns>Session_ID__c</columns>
    <columns>Contact__c</columns>
    <columns>Account__c</columns>
    <columns>Application__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Published__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Search_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY()</value>
    </filters>
    <filters>
        <field>Published__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Published NCP Sessions</label>
</ListView>